# Soccer-Analytics-App

./: .gitignore  CMakeLists.txt  README.md  resource_file.qrc
datas/: PassData - Лист1.csv
include/: Attack.h  GameFieldLabel.h  Pass.h  mainwindow.h  mainwindow.ui
src/: Attack.cpp  GameFieldLabel.cpp  Pass.cpp  main.cpp  mainwindow.cpp
